# sherlock-topic-model-paper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  apa6.cls  boneyard.tex  main.bbl  main.blg  main.tex  paxton_changes.md
code/helpers/: analysis_helpers.py  download_neural_data.sh
code/notebooks/: README.md  brains.ipynb  eventseg_analysis.ipynb  eventseg_fig.ipynb  feature_feature_correlation.ipynb  figs_5_6.ipynb  list-learning_analysis.ipynb  model_structure_features_impact.ipynb  movie_recall_correlation_features_impact.ipynb  supp2_event_model_correlation_matrices.ipynb  supp3_feature_model_impact.ipynb  supp4_feature_model_impact.ipynb  topic_model_analysis.ipynb  topics_fig.ipynb  trajectory_analysis_and_fig.ipynb
code/scripts/: download_neural_data.sh  load_cluster_output.py  searchlight_movie.py  searchlight_movie_perms.py  searchlight_recall.py  searchlight_recall_perms.py
code/sherlock_helpers/: README.md  setup.cfg  setup.py
code/sherlock_helpers/sherlock_helpers/: __init__.py  constants.py  functions.py  load_cluster_output.py
data/processed/: Untitled.ipynb  avg_recall_events.npy  avg_recall_events_corpus_video_recall.npy  avg_recall_events_corrdist.npy  avg_recall_events_wasserstein.npy  (+58 more)
notebooks/: 3_naturalistic_behavioral_analysis_eventseg.ipynb  event_segmentation_fig.ipynb  hinges.ipynb  trajectory_fig.ipynb
paper/: Makefile  boneyard.tex  diff.tex  extended_data.tex  main.bbl  main.blg  main.tex  main_biorxiv.tex  memlab.bib  old.tex  supplemental_materials.tex  supplementary_information.tex  supporting_information.tex
(+322 files in other folders)
