[metadata]
name = sherlock_helpers
version = attr: sherlock_helpers.__version__
description = Helper functions, constants, and scripts for reproducing analyses from https://github.com/ContextLab/sherlock-topic-model-paper
author = Andrew C. Heusser, Paxton C. Fitzpatrick, and Jeremy R. Manning
author_email = contextualdynamics@gmail.com
url = https://github.com/ContextLab/sherlock-topic-model-paper
download_url = https://github.com/ContextLab/sherlock-topic-model-paper
license = MIT

[options]
python_requires = >=3.6
packages = sherlock_helpers
setup_requires = setuptools>=38.3.0